# predica

./: CHANGELOG.md  README.md  pyproject.toml
src/predica/: __init__.py  predicates.py
